# plex-o-matic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PLAN.md  README.md  SPEC.md  conftest.py  debug_imports.py  mypy.ini  plexomatic_cli.py  pre-commit-mypy.ini  pyproject.toml  pytest.ini  pytest_migration_plan.md  setup.py  test_compat.py  test_safe_cast.py  tox.ini  typing_roadmap.md
.cursor/rules/: maintain-changelog.mdc  test-driven-development.mdc
.github/workflows/: release.yml  test.yml
config/: config.example.yaml
docs/: README.md  episode_handling.md  getting_started.md  index.md
docs/api/: README.md
docs/backend/: architecture.md
docs/cli/: README.md
docs/configuration/: README.md
docs/database/: schema.md
docs/file-utils/: README.md  subtitle_support.md  template_system.md
docs/metadata/: README.md  episode_integration.md
plexomatic/: __init__.py  __main__.py  cli.py  cli_ui.py
plexomatic/api/: anidb_client.py  base_client.py  llm_client.py  musicbrainz_client.py  tmdb_client.py  tvdb_client.py  (+1 more)
tests/: __init__.py  conftest.py  test_anidb_client.py  test_backup_system.py  test_cli.py  test_cli_configure.py  test_config_manager.py  test_episode_handler.py  test_episode_integration.py  test_file_ops.py  test_file_scanner.py  test_llm_client.py  test_metadata_episode_integration.py  test_metadata_fetcher.py  test_metadata_manager.py  test_name_parser.py  test_name_parser_comprehensive.py  test_name_templates.py  test_name_utils.py  test_template_loading.py  test_tmdb_client.py  test_tvdb_client.py  test_tvmaze_client.py
(+130 files in other folders)
