[project]
name = "plex-o-matic"
version = "0.1.0"
description = "An intelligent media file organization tool for Plex"
authors = [
    { name = "Douglas MacKrell", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.0",           # CLI framework
    "rich>=13.0.0",          # Terminal formatting and output
    "pathlib>=1.0.1",        # Path manipulation
    "requests>=2.31.0",      # HTTP client for API calls
    "pyyaml>=6.0.1",         # YAML configuration
    "sqlalchemy>=2.0.0",     # Database ORM
    "python-dotenv>=1.0.0",  # Environment variable management
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=plexomatic"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"] 